This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

24-Jun-2010 Ian MacLennan
# Fixed intermittently failing unit test

23-Jun-2010 Ian MacLennan
+ Added unit tests for JAdapter, JAdapterInstance and one for JObject
# Fixed unit tests that were breaking because mocks were not getting properly injected
# Fixed JCache unit tests to supply storage handler to accomodate behaviour change (thanks Klas)

22-Jun-2010 Mark Dexter
# Added test fixes for failing system tests on Hudson server

22-Jun-2010 Ian MacLennan
 # Added unit tests for JDocument

20-Jun-2010 Mark Dexter
# [#20735] JMailHelper unit tests

19-Jun-2010 Mark Dexter
+ New system test featured0002test to test ordering down columns
+ New methods in SeleniumJoomlaTestCase for toggling featured and published in Article Manager

12-Jun-2010 Mark Dexter
# Fix failing featured0001Test

08-Jun-2010 Mark Dexter
^ Refactor methods in SeleniumJoomlaTestCase (Matt Thomas)
# Fix system test errors
^ Refactor menu0001Test to remove sleep statements

07-Jun-2010 Sam Moffatt
 # Fixed incorrect metadata in package sample

07-Jun-2010 Mark Dexter
+ New system test for featured blog ordering
# Clean up doc blocks for system tests 

04-Jun-2010 Mark Dexter
^ Improvements to SeleniumJoomlaTestCase. (Matt Thomas)

30-May-2010 Mark Dexter
# JLanguageTest fixes and improvements. Thanks Tudor Mazilu!  

28-May-2010 Mark Dexter
# Fix broken acl0001Test.php system test

27-May-2010 Mark Dexter
# Fix broken doInstall.php system test

25-May-2010 Mark Dexter
# Fix broken system tests (Matt Thomas)

19-May-2010 Mark Dexter
# Fix system test for template change

17-May-2010 Mark Dexter
# Fix up system tests for core changes
# Fix sample data test
